产品类别功能

--- a/src/main/resources/deploy/env-dev.properties
+++ b/src/main/resources/deploy/env-dev.properties
@@ -7,6 +7,6 @@ log.only_sql=true
 log.mail.active=false
 
 ##  jdbc.properties configuration
-dataSource.url=jdbc:mysql://120.24.236.186:3306/dms_dev?useUnicode=true&amp;characterEncoding=utf8
-dataSource.username=dms_dev
-dataSource.password=dev
+dataSource.url=jdbc:mysql://124.117.230.45:3306/dms_dev?useUnicode=true&amp;characterEncoding=utf8
+dataSource.username=root
+dataSource.password=rootroot
